--- a/css/style.less
+++ b/css/style.less
@@ -30,3 +30,41 @@
   border-color: #e44;
   background: #fdd;
 }
+
+.key-info {
+  td { 
+    padding: 4px;
+  }
+
+  .hd {
+    background: #ddd;
+    font-weight: bold;
+    text-align: right;
+  }
+
+  .armor {
+    pre {
+      font-size: 0.7em;
+      overflow: auto;
+      border: 1px solid #999;
+      background: #ffe;
+      padding: 3px;
+      height: 100px;
+      margin: 0;
+    }
+
+    .private {
+      background: #fee;
+    }
+
+    a {
+      color: blue;
+      text-decoration: none;
+      display: block;
+      text-align: right;
+      font-size: 0.7em;
+      margin: 0;
+      padding: 0;
+    }
+  }
+}
