--- a/templates/_error.html
+++ b/templates/_error.html
@@ -1,3 +1,3 @@
-<div class="row" ng-show="error">
-  <div class="col c12 msg warning">{{ error }}</div>
+<div class="pure-g" ng-show="error">
+  <div class="pure-u-1 warning">{{ error }}</div>
 </div>
