--- a/templates/mykeys/import.html
+++ b/templates/mykeys/import.html
@@ -1,6 +1,6 @@
 <div class="pure-g">
   <div class="pure-u-1">
-    <form name="importKeysForm" class="pure-form pure-form-stacked">
+    <form name="importKeysForm" rv-on-submit="submit" class="pure-form pure-form-stacked">
       <fieldset>
         <legend>Import a PGP key</legend>
         <div class="pure-g" rv-show="note">
@@ -15,7 +15,7 @@
             <textarea class="pure-u-1-3" rv-value="key" required="yes"></textarea>
           </div>
           <div class="pure-control-group">
-            <button rv-on-click="submit" class="pure-button pure-button-primary">Import</button>
+            <button type="submit" class="pure-button pure-button-primary">Import</button>
             <span rv-show="spinner"><i class="fa fa-cog fa-spin"></i></span>
           </div>
       </fieldset>
