--- a/chrome/css/style.less
+++ b/chrome/css/style.less
@@ -47,7 +47,7 @@ article {
 .key-info {
   padding: 0 7px;
 
-  td { 
+  td {
     padding: 4px;
   }
 
@@ -87,5 +87,22 @@ form[name=importKeysForm] {
   textarea {
     width: 400px;
     height: 400px;
+  }
+}
+
+#iframe {
+  font-size: 12px;
+  font-family: sans-serif;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+
+  #header {
+    padding: 2px 4px;
+    background-color: #ccc;
+    color: #111;
+    font-weight: bold;
+    text-align: left;
+    .close { float: right; cursor: pointer; }
   }
 }
