--- a/chrome/src/templates/key/view.html
+++ b/chrome/src/templates/key/view.html
@@ -4,18 +4,18 @@
     <tbody>
       <tr>
         <td>Fingerprint</td>
-        <td>{ public.primaryKey.fingerprint }</td>
+        <td>{ publicKey.fingerprint }</td>
       </tr>
       <tr>
         <td>User IDs</td>
         <td>
           <ul>
-            <li rv-each-user="key.getUserIds">{ user }</li>
+            <li rv-each-user="publicKey.getUserIds">{ userIds }</li>
           </ul>
         </td>
       </tr>
       <tr>
-        <td colspan="2"><pre>{ public.armor }</pre></td>
+        <td colspan="2"><pre>{ publicKey.armored }</pre></td>
       </tr>
     </tbody>
   </table>
