Fixes in view and generate

--- a/chrome/src/templates/key/generate.html
+++ b/chrome/src/templates/key/generate.html
@@ -24,7 +24,7 @@
             <input rv-value="confirm" type="password" required="yes" minlength="10" />
           </div>
           <div class="pure-control-group">
-            <button type="submit" class="pure-button pure-button-primary">Create</button>
+            <button type="submit" rv-class-pure-button-disabled="spinner" class="pure-button pure-button-primary">Create</button>
             <span rv-show="spinner"><i class="fa fa-cog fa-spin"></i></span>
           </div>
       </fieldset>
