Add CSS style for info

--- a/chrome/css/style.less
+++ b/chrome/css/style.less
@@ -33,12 +33,19 @@ article {
 //--------------------------------------------------------
 // Widgets
 //--------------------------------------------------------
-.warning {
+.warning, .info {
   padding: 1em;
   margin: 1em;
   color: #000;
   border-left: 3px solid #e44;
   background: #fdd;
+  cursor: pointer;
+}
+
+.info {
+  color: #000;
+  border-left: 3px solid #4e4;
+  background: #dfd;
 }
 
 //--------------------------------------------------------
