fix error with view key template

--- a/chrome/src/templates/key/view.html
+++ b/chrome/src/templates/key/view.html
@@ -10,7 +10,7 @@
         <td>User IDs</td>
         <td>
           <ul>
-            <li rv-each-user="key.userIds">{ publicKey.userIds }</li>
+            <li rv-each-user="key.userIds">{ key.userIds }</li>
           </ul>
         </td>
       </tr>
