--- a/chrome/css/style.less
+++ b/chrome/css/style.less
@@ -97,12 +97,19 @@ form[name=importKeysForm] {
   }
 }
 
+.full {
+  height: 100%;
+  margin: 0;
+}
+
 #iframe {
   font-size: 12px;
   font-family: sans-serif;
-  width: 100%;
-  height: 100%;
+  width: 98%;
+  height: 98%;
   background-color: #fff;
+  border: 1px solid #999;
+  display: block;
 
   #header {
     padding: 2px 4px;
