--- a/chrome/css/iframe.less
+++ b/chrome/css/iframe.less
@@ -8,10 +8,9 @@ html,body {
 #iframe {
   font-size: 12px;
   font-family: sans-serif;
-  width: 98%;
-  height: 98%;
+  width: 300px;
+  height: 300px;
   background-color: #fff;
-  border: 2px solid #999;
   display: block;
 
   #header {
