--- a/chrome/css/iframe.less
+++ b/chrome/css/iframe.less
@@ -1,8 +1,22 @@
-@iframeWidth: 300;
 
 html,body {
   height: 100%;
   margin: 0;
+}
+
+#password {
+  width: 300px;
+  height: 300px;
+
+  input {
+    width: 90%;
+    font-size: 2em;
+    padding: 3px;
+  }
+
+  button {
+
+  }
 }
 
 #iframe {
