--- a/chrome/css/iframe.less
+++ b/chrome/css/iframe.less
@@ -1,22 +1,47 @@
 
+@colorLight1: #A2CDF2;
+@colorLight2: #F2F2F2;
+
+@bgLight: #6C7D8C;
+@bgDark: #000D02;
+
+@accent: #D94436;
+
+@errorColor: @accent;
+
 html,body {
-  height: 100%;
   margin: 0;
+  padding: 0;
+  width: 300px;
+}
+
+#error {
+  background-color: @errorColor;
+  color: @bgDark;
+  padding: 3px;
+  font-weight: bold;
+  text-align: center;
 }
 
 #password {
+  background-color: @bgLight;
   width: 300px;
-  height: 300px;
-
-  input {
-    width: 90%;
-    font-size: 2em;
-    padding: 3px;
-  }
+  height: 100px;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
 
   button {
-
+    font-size: 90%;
+    margin-top: 6px;
   }
+
+  input {
+    font-size: 150%;
+    padding: 5px;
+    border: 2px solid @bgDark;
+  }
+
 }
 
 #iframe {
