--- a/chrome/src/templates/browser/address_book.html
+++ b/chrome/src/templates/browser/address_book.html
@@ -1,5 +1,8 @@
 <div id="address-book">
-  <input class="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="filter">
+  <div class="well">
+    <label for="filter">Encrypt for:</label>
+    <input class="filter" name="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="filter">
+  </div>
   <ul>
     <li rv-on-click="select" rv-each-key="foundKeys"><input type="checkbox" rv-checked="key.selected" /><span rv-text="key.name"></span></li>
   </ul>
