--- a/chrome/src/templates/browser/address_book.html
+++ b/chrome/src/templates/browser/address_book.html
@@ -1,7 +1,6 @@
 <div id="address-book">
   <div class="well">
-    <label for="filter">Encrypt for:</label>
-    <input class="filter" name="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="filter">
+    <input class="filter" name="filter" rv-value="filter" rv-on-keyup="doFilter" placeholder="name or email">
   </div>
   <ul>
     <li rv-on-click="select" rv-each-key="foundKeys"><input type="checkbox" rv-checked="key.selected" /><span rv-text="key.name"></span></li>
