--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -157,6 +157,37 @@ article {
   }
 }
 
-  button {
-    font-weight: bold;
-  }
+button {
+    font-family: inherit;
+    font-size: 120%;
+    padding: 0.5em 1em;
+    color: rgba(0, 0, 0, 0.80);
+    border: none rgba(0, 0, 0, 0); 
+    background-color: #E6E6E6;
+    text-decoration: none;
+    border-radius: 2px;
+    &:hover,
+    &:focus {
+      background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+    }
+
+    &::focus {
+      outline: 0;
+    }
+
+    background-color: rgb(0, 120, 231);
+    color: #fff;
+
+    cursor: pointer;
+
+    &[disabled] {
+      border: none;
+      background-image: none;
+      filter: alpha(opacity=40);
+      opacity: 0.40;
+      cursor: not-allowed;
+      box-shadow: none;
+    }
+}
+
+
