Figure out how to do dependency in Rivets

--- a/chrome/src/templates/browser/address_book.html
+++ b/chrome/src/templates/browser/address_book.html
@@ -4,5 +4,5 @@
   <ul>
     <li rv-on-click="select" rv-each-key="foundKeys"><input type="checkbox" rv-checked="key.selected" /><span rv-text="key.name"></span></li>
   </ul>
-  <button rv-on-click="submit" rv-show="hasSelected">encrypt</button>
+  <button rv-on-click="submit" rv-show="hasSelected < triggers.select">encrypt</button>
 </div>
