--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -34,6 +34,18 @@ html,body {
   padding: 0;
 }
 
+.error {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: @pwdBoxWidth;
+  background-color: @pwdErrorBg;
+  color: @pwdErrorFg;
+  padding: 3px;
+  font-weight: bold;
+  text-align: center;
+}
+
 #password {
   background-color: @pwdBg;
   width: @pwdBoxWidth;
@@ -55,17 +67,6 @@ html,body {
     width: ;
   }
 
-  .error {
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: @pwdBoxWidth;
-    background-color: @pwdErrorBg;
-    color: @pwdErrorFg;
-    padding: 3px;
-    font-weight: bold;
-    text-align: center;
-  }
 
 }
 
@@ -124,35 +125,74 @@ article {
 
 #address-book {
 
+  position: relative;
+
+  label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: 2px;
+  }
+
   .filter {
     width: 98%;
     padding: 2px;
     font-size: 120%;
-    margin-bottom: 3px;
+    margin-bottom: 0px;
     color: #002F2F;
     font-weight: bold;
     border: 1px solid #666;
   }
 
   ul {
-    max-height: @articleHeight / 2;
     overflow-y: auto;
     overflow-x: hidden;
-    margin: 5px 0;
+    margin: 0;
     padding: 0;
+    li {
+      list-style-type: none;
+    }
+  }
+
+  ul.found-keys {
+    background: #fff;
+    border: 1px solid #666;
+    max-height: @articleHeight / 3;
     input[type="checkbox"] {
       cursor: pointer;
     }
     li {
       padding: 5px;
-      list-style-type: none;
       cursor: pointer;
-      border: 1px solid @base;
       &:hover {
         background-color: @ulBg;
         color: @ulFg;
-        border: 1px solid @ulBorder;
       }
+    }
+  }
+
+  .bottom {
+    position: absolute;
+    height: @articleHeight / 2;
+    top: @articleHeight - @articleHeight / 2;
+  }
+
+  ul.selected-keys {
+    margin-bottom: 10px;
+    height: @articleHeight / 5;
+    overflow-y: auto;
+    li {
+      float: left;
+      padding: 1px 2px;
+      margin-right: 4px;
+      max-width: 50px;
+      max-height: 15px;
+      line-height: 15px;
+      overflow: hidden;
+      background-color: #AADDDD; 
+      border: 1px solid #666;
+      font-variant: small-caps;
+      text-transform: lowercase;
+      border-radius: 5px;
     }
   }
 }
