--- a/chrome/src/templates/browser/address_book.html
+++ b/chrome/src/templates/browser/address_book.html
@@ -5,7 +5,7 @@
   <ul class="found-keys" rv-show="hasFoundKeys < foundKeys">
     <li rv-on-click="select" rv-each-key="foundKeys"><span>{ key.getPrimaryUser }</span></li>
   </ul>
-  <div class="bottom" rv-show="hasSelectedKeys < triggers.select">
+  <div class="bottom" rv-show="hasSelectedKeys < selectedKeys">
     <label>Encrypt for:</label>
     <ul class="selected-keys">
       <li rv-each-key="selectedKeys"><div class="name">{ key.getPrimaryUser }</div><div class="remove" rv-on-click="remove">x</div></li>
