disable encryption if no textarea

--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -48,6 +48,10 @@ html,body {
   padding: 0;
 }
 
+textarea:focus, input:focus{
+    outline: none;
+}
+
 // General error
 .error {
   position: absolute;
