--- a/chrome/src/templates/browser/encrypt.html
+++ b/chrome/src/templates/browser/encrypt.html
@@ -1,4 +1,4 @@
-<div id="address-book">
+<div id="encrypt-tab">
   <div rv-show="clearText">
     <div class="error" rv-show="error">{ error }</div>
     <label for="filter">Search address book:</label>
