Send public key

--- a/chrome/src/templates/browser/mykey.html
+++ b/chrome/src/templates/browser/mykey.html
@@ -1,3 +1,6 @@
-<div id="cloud-keys" class="tab">
-  Work in progress ...
+<div id="my-key" class="tab middle">
+  <p>
+  Send a short link of your public key
+  </p>
+  <button rv-on-click="submit">Send my public key</button>
 </div>
