Begin working on flagging encrypted

--- a/chrome/src/templates/browser/mykey.html
+++ b/chrome/src/templates/browser/mykey.html
@@ -1,6 +1,6 @@
 <div id="my-key" class="tab middle">
   <p>
-  Send a short link of your public key
+  Send a short link with your public key
   </p>
-  <button rv-on-click="submit">Send my public key</button>
+  <button rv-on-click="submit">Paste my public key</button>
 </div>
