--- a/chrome/src/templates/browser/lock.html
+++ b/chrome/src/templates/browser/lock.html
@@ -1,4 +1,4 @@
 <div id="lock-tab" class="tab middle">
   <p>Locking will forget your private key password. </p>
-  <button class="button-large" rv-on-click="submit">Lock Now</button>
+  <button class="button-large button-error" rv-on-click="submit">Lock Now</button>
 </div>
