--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -104,6 +104,10 @@ button {
   font-size: 150%;
 }
 
+.button-error {
+  background: rgb(202, 60, 60); /* this is a maroon */
+}
+
 .middle {
   display: table-cell;
   width: @mainWidth;
