Restore bug found

--- a/chrome/src/templates/browser/encrypt.html
+++ b/chrome/src/templates/browser/encrypt.html
@@ -22,6 +22,6 @@
   </div>
   <div rv-show="alreadyEncrypted" class="middle">
     <p>This message has already been encrypted. You can send it now.</p>
-    <button rv-on-click="restore">Decrypt your message</button>
+    <button rv-on-click="restore">Restore original message</button>
   </div>
 </div>
