--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -11,7 +11,7 @@
 @base: #EFECCA;
 @tabBg: #A7A37E;
 @tabFg: #333;
-@tabHover: #E6E2AF; 
+@tabHover: #E6E2AF;
 @activeTabBg: @base;
 @activeTabFg: #333;
 
@@ -55,9 +55,9 @@ textarea:focus, input:focus{
 // General error
 .error {
   position: absolute;
+  width: 100%;
   top: 0px;
   left: 0px;
-  width: @pwdBoxWidth;
   background-color: @pwdErrorBg;
   color: @pwdErrorFg;
   padding: 3px;
@@ -72,7 +72,7 @@ button {
     font-size: 120%;
     padding: 0.5em 1em;
     color: rgba(0, 0, 0, 0.80);
-    border: none rgba(0, 0, 0, 0); 
+    border: none rgba(0, 0, 0, 0);
     background-color: #E6E6E6;
     text-decoration: none;
     border-radius: 2px;
@@ -171,7 +171,7 @@ button {
         font-weight: bold;
 
         &:hover {
-          color: @tabHover; 
+          color: @tabHover;
         }
 
         &.active  {
@@ -254,7 +254,7 @@ article {
       height: @beadHeight;
       line-height: @beadHeight;
       color: @beadFg;
-      background-color: @beadBg; 
+      background-color: @beadBg;
       border: @beadBorder;
       border-radius: @beadRadius;
       .name {
