Address a case when the user has not created a key

--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -115,6 +115,12 @@ button {
   vertical-align: middle;
 }
 
+// No key setup yet screen
+#no-key {
+  width: @pwdBoxWidth;
+  height: 80px;
+}
+
 // Password screen
 #password {
   background-color: @pwdBg;
