--- a/chrome/src/templates/browser/encrypt.html
+++ b/chrome/src/templates/browser/encrypt.html
@@ -24,4 +24,7 @@
     <p>This message has already been encrypted. You can send it now.</p>
     <button rv-on-click="restore">Restore original message</button>
   </div>
+  <div class="footer">
+    <button class="button-small" rv-on-click="goSettings">address book</button>
+  </div>
 </div>
