--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -17,10 +17,11 @@
 
 @mainWidth: 360px;
 @mainHeight: 300px;
-@menuHeight: 30px;
+@menuHeight: 20px;
 
 @borderSize: 2px;
-@border: @borderSize solid #73603D;
+//@border: @borderSize solid #73603D;
+@border: none;
 @articlePadding: 10px;
 @articleHeight: @mainHeight - @menuHeight - @articlePadding * 2 - @borderSize;
 
@@ -169,7 +170,7 @@ button {
       li {
         font-size: 115%;
         list-style-type: none;
-        float: left;
+        float: right;
       }
 
       a {
