--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -143,12 +143,9 @@ button {
     width: ;
   }
 
-  .center {
-    display: table-cell;
+  .middle {
     width: @pwdBoxWidth;
     height: @pwdBoxHeight;
-    text-align: center;
-    vertical-align: middle;
   }
 }
 
@@ -160,7 +157,6 @@ button {
   background-color: @base;
 
   .menu {
-    background-color: #fff;
     height: @menuHeight;
     line-height: @menuHeight;
     ul {
@@ -178,7 +174,7 @@ button {
         text-decoration: none;
         color: @tabFg;
         background-color: @tabBg;
-        padding: 0 15px;
+        padding: 0 5px;
         margin-right: 3px;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
