--- a/chrome/css/browser.less
+++ b/chrome/css/browser.less
@@ -11,9 +11,15 @@
 @base: #EFECCA;
 @tabBg: #A7A37E;
 @tabFg: #333;
-@tabHover: #E6E2AF;
+@tabHover: #fff;
 @activeTabBg: @base;
 @activeTabFg: #333;
+
+// Logo
+@logoBg: #8e2800;
+@logoFg: #fff;
+//@logoBorder: 6px solid #8F7000;
+@logoBorder: 6px solid #DBAC00;
 
 @mainWidth: 360px;
 @mainHeight: 300px;
@@ -66,6 +72,13 @@ textarea:focus, input:focus, a:focus {
   text-align: center;
 }
 
+.pull-left {
+  float: left;
+}
+
+.pull-right {
+  float: right;
+}
 
 // General button
 button {
@@ -156,9 +169,18 @@ button {
   display: block;
   background-color: @base;
 
+  .logo {
+    text-decoration: none;
+    color: @logoFg;
+    background-color: @logoBg;
+    padding: 0 5px;
+    border-right: @logoBorder;
+  }
+
   .menu {
     height: @menuHeight;
     line-height: @menuHeight;
+    background-color: @tabBg;
     ul {
       margin: 0;
       padding: 0;
@@ -176,33 +198,20 @@ button {
         background-color: @tabBg;
         padding: 0 5px;
         margin-right: 3px;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        font-weight: bold;
 
         &:hover {
           color: @tabHover;
-        }
-
-        &.active  {
-          background: @activeTabBg;
-          color: @activeTabFg;
-          border: @border;
-          border-bottom: none;
         }
       }
     }
   }
 }
 
-article {
+// Address book tab
+#encrypt-tab {
   padding: @articlePadding;
   border: @border;
   height: @articleHeight;
-}
-
-// Address book tab
-#encrypt-tab {
 
   position: relative;
 
